--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -25,8 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a690785c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Anuj!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Anuj!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1efa0a8b",
    "metadata": {},
    "outputs": [],
    "source": []
