--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a690785c",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "071c540d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max value: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=eval(input(\"Enter the list: \"))\n",
+    "if type(l)==list:\n",
+    "    max=l[0]\n",
+    "    for i in l:\n",
+    "        if type(l[l.index(i)])==int:\n",
+    "            if i>max:\n",
+    "                max=i\n",
+    "    print(\"max value:\",max)         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1efa0a8b",
+   "id": "623a6c47",
    "metadata": {},
    "outputs": [],
    "source": []
