--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -43,18 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "071c540d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max value: 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "l=eval(input(\"Enter the list: \"))\n",
     "if type(l)==list:\n",
@@ -70,6 +62,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "623a6c47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "40e54f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to print n natural numbers\n",
+    "\n",
+    "n=int(input(\"Enter a number --\"))  \n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    print(i)\n",
+    "    i+=1  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7473d0e8",
    "metadata": {},
    "outputs": [],
    "source": []
