--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -96,8 +96,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7473d0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum: 6\n",
+      "product: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the product of odd digits and sum of even digits of a given number\n",
+    "\n",
+    "n=int(input(\"Enter a number: \"))\n",
+    "sum= 0\n",
+    "pro= 1\n",
+    "while n>0:\n",
+    "    ld=n%10\n",
+    "    if ld%2==0:\n",
+    "        sum+=ld\n",
+    "    else:\n",
+    "        pro*=ld\n",
+    "    n//=10 \n",
+    "print(\"sum:\",sum)\n",
+    "print(\"product:\",pro)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aeabcd4",
    "metadata": {},
    "outputs": [],
    "source": []
