--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -128,11 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6aeabcd4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to get the sum of n natural numbers \n",
+    "# Product of n natural numbers\n",
+    "n = int(input(\"Enter the number --\"))\n",
+    "pro = 1\n",
+    "for i in range(1,n+1):\n",
+    "    pro*=i\n",
+    "print(pro)    "
+   ]
   }
  ],
  "metadata": {
