--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -34,8 +34,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "74f2e253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q2.First 10 Odd numbers \n",
+    "num = 1      \n",
+    "count = 1    \n",
+    "\n",
+    "while count <= 10:\n",
+    "    print(num)\n",
+    "    num += 2    \n",
+    "    count += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d14c9494",
    "metadata": {},
    "outputs": [],
    "source": []
