--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -68,11 +68,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d14c9494",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q3.First 10 Natural numbers \n",
+    "i = 1         \n",
+    "while i <= 10: \n",
+    "    print(i)\n",
+    "    i += 1     "
+   ]
   }
  ],
  "metadata": {
