--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -96,6 +96,45 @@
     "    print(i)\n",
     "    i += 1     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1637d434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q4. First 10 Whole numbers\n",
+    "i = 0  \n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014a3ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
