--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -130,11 +130,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "014a3ee8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number: 1, Square: 1\n",
+      "Number: 2, Square: 4\n",
+      "Number: 3, Square: 9\n",
+      "Number: 4, Square: 16\n",
+      "Number: 5, Square: 25\n",
+      "Number: 6, Square: 36\n",
+      "Number: 7, Square: 49\n",
+      "Number: 8, Square: 64\n",
+      "Number: 9, Square: 81\n",
+      "Number: 10, Square: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1   \n",
+    "while i <= 10:\n",
+    "    print(f\"Number: {i}, Square: {i ** 2}\")\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
