--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "014a3ee8",
    "metadata": {},
    "outputs": [
@@ -152,6 +152,7 @@
     }
    ],
    "source": [
+    "#Q5. Write a program to print first 10 integers and their squares using while loop. \n",
     "i = 1   \n",
     "while i <= 10:\n",
     "    print(f\"Number: {i}, Square: {i ** 2}\")\n",
