--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -158,6 +158,57 @@
     "    print(f\"Number: {i}, Square: {i ** 2}\")\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec844bb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n",
+      "110\n",
+      "120\n",
+      "130\n",
+      "140\n",
+      "150\n",
+      "160\n",
+      "170\n",
+      "180\n",
+      "190\n",
+      "200\n",
+      "210\n",
+      "220\n",
+      "230\n",
+      "240\n",
+      "250\n",
+      "260\n",
+      "270\n",
+      "280\n",
+      "290\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q6. Write while loop statement to print the following series: 10, 20, 30 … … 300 \n",
+    "i = 10\n",
+    "while i <= 300:\n",
+    "    print(i)\n",
+    "    i += 10"
+   ]
   }
  ],
  "metadata": {
