--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -209,6 +209,42 @@
     "    print(i)\n",
     "    i += 10"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4011decf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n",
+      "98\n",
+      "91\n",
+      "84\n",
+      "77\n",
+      "70\n",
+      "63\n",
+      "56\n",
+      "49\n",
+      "42\n",
+      "35\n",
+      "28\n",
+      "21\n",
+      "14\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q7. Write a while loop statement to print the following series 105, 98, 91 ………7.\n",
+    "i = 105\n",
+    "while i >= 7:\n",
+    "    print(i)\n",
+    "    i -= 7"
+   ]
   }
  ],
  "metadata": {
