--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -245,6 +245,48 @@
     "    print(i)\n",
     "    i -= 7"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c9ba34db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f', 'd', 'r', 'e']\n",
+      "['2', '1', '3', '1']\n",
+      "['@']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WAP to extract all the special charactrs, alphabets and numbers in a given string\n",
+    "word = eval(input(\"Enter a string: \"))\n",
+    "alpha_list = []\n",
+    "num_list = []\n",
+    "sp_list = []\n",
+    "for i in word:\n",
+    "    if i.isalpha():\n",
+    "        alpha_list.append(i)\n",
+    "    elif i.isdigit():\n",
+    "        num_list.append(i)\n",
+    "    else:\n",
+    "        sp_list.append(i)\n",
+    "print(alpha_list)\n",
+    "print(num_list)\n",
+    "print(sp_list)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b347193a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
