--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -26,6 +26,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "065b40f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bb0e4d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f', 'd', 'g', 'd']\n",
+      "['1', '2', '3', '4']\n",
+      "['@', '$']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WAP to extract all the special charactrs, alphabets and numbers in a given string\n",
+    "word = eval(input(\"Enter a string: \"))\n",
+    "alpha_list = []\n",
+    "num_list = []\n",
+    "sp_list = []\n",
+    "for i in word:\n",
+    "    if i.isalpha():\n",
+    "        alpha_list.append(i)\n",
+    "    elif i.isdigit():\n",
+    "        num_list.append(i)\n",
+    "    else:\n",
+    "        sp_list.append(i)\n",
+    "print(alpha_list)\n",
+    "print(num_list)\n",
+    "print(sp_list)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a690785c",
    "metadata": {},
    "outputs": [
