--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -315,6 +315,37 @@
     "    print(i)\n",
     "    i = i - 7"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "69e494f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q8. Write a program to print the first 10 natural number in reverse order using while loop.\n",
+    "i = 10\n",
+    "while i >= 1:\n",
+    "    print(i)\n",
+    "    i = i - 1"
+   ]
   }
  ],
  "metadata": {
