--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -346,6 +346,32 @@
     "    print(i)\n",
     "    i = i - 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9b240d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of first 10 natural numbers is: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q9. Write a program to print sum of first 10 Natural numbers.\n",
+    "i = 1\n",
+    "sum = 0\n",
+    "\n",
+    "while i <= 10:\n",
+    "    sum = sum + i\n",
+    "    i = i + 1\n",
+    "\n",
+    "print(\"Sum of first 10 natural numbers is:\", sum)"
+   ]
   }
  ],
  "metadata": {
