--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -372,6 +372,42 @@
     "\n",
     "print(\"Sum of first 10 natural numbers is:\", sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a2a98240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of first 10 even numbers is: 110\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q10. Write a program to print sum of first 10 Even numbers. \n",
+    "\n",
+    "i = 1\n",
+    "sum_even = 0\n",
+    "\n",
+    "while i <= 10:\n",
+    "    even_num = i * 2\n",
+    "    sum_even += even_num\n",
+    "    i += 1\n",
+    "\n",
+    "print(\"Sum of first 10 even numbers is:\", sum_even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fbfea9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
