--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -403,8 +403,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3fbfea9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 x 1 = 12\n",
+      "12 x 2 = 24\n",
+      "12 x 3 = 36\n",
+      "12 x 4 = 48\n",
+      "12 x 5 = 60\n",
+      "12 x 6 = 72\n",
+      "12 x 7 = 84\n",
+      "12 x 8 = 96\n",
+      "12 x 9 = 108\n",
+      "12 x 10 = 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q11. Write a program to print table of a number entered from the user.\n",
+    "\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    print(f\"{num} x {i} = {num * i}\")\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30ac8b8",
    "metadata": {},
    "outputs": [],
    "source": []
