--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -438,10 +438,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a30ac8b8",
+   "id": "e9591d5a",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30ac8b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q13. Write a program to check whether a number is prime or not using while loop.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
