--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -453,6 +453,42 @@
     "#Q13. Write a program to check whether a number is prime or not using while loop.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a53f9f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of the digits is: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q14. Write a program to find the sum of the digits of a number accepted from the user.\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "sum_digits = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10       \n",
+    "    sum_digits += digit \n",
+    "    num = num // 10      \n",
+    "\n",
+    "print(\"Sum of the digits is:\", sum_digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc546f64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
