--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -484,8 +484,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fc546f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of the digits is: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q15. Write a program to find the product of the digits of a number accepted from the user. \n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "sum_digits = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10        \n",
+    "    sum_digits = sum_digits + digit\n",
+    "    num = num // 10         \n",
+    "\n",
+    "print(\"Sum of the digits is:\", sum_digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4861e54",
    "metadata": {},
    "outputs": [],
    "source": []
