--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -512,8 +512,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d4861e54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reversed number is: 54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q16. Write a program to reverse the number accepted from user using while loop.\n",
+    "\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "rev = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10        \n",
+    "    rev = rev * 10 + digit    \n",
+    "    num = num // 10          \n",
+    "\n",
+    "print(\"Reversed number is:\", rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01b067d",
    "metadata": {},
    "outputs": [],
    "source": []
