--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -541,8 +541,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f01b067d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two Three One "
+     ]
+    }
+   ],
+   "source": [
+    "#Q17. Write a program to display the number names of the digits of a number entered by \n",
+    "#user, for example if the number is 231 then output should be Two Three One \n",
+    "\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "names = [\"Zero\", \"One\", \"Two\", \"Three\", \"Four\", \"Five\", \"Six\", \"Seven\", \"Eight\", \"Nine\"]\n",
+    "\n",
+    "rev = 0\n",
+    "# Reverse the number first to maintain correct order\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    rev = rev * 10 + digit\n",
+    "    num = num // 10\n",
+    "\n",
+    "# Display each digit in words\n",
+    "while rev > 0:\n",
+    "    digit = rev % 10\n",
+    "    print(names[digit], end=\" \")\n",
+    "    rev = rev // 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "060f17b5",
    "metadata": {},
    "outputs": [],
    "source": []
