--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -577,8 +577,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "0470b0d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci Series:\n",
+      "0 1 1 2 3 5 8 13 21 "
+     ]
+    }
+   ],
+   "source": [
+    "#Q18. Write a program to print the Fibonacci series till n terms (Accept n from user) using while loop.\n",
+    "\n",
+    "n = int(input(\"Enter number of terms: \"))\n",
+    "\n",
+    "a = 0   # first term\n",
+    "b = 1   # second term\n",
+    "count = 0\n",
+    "\n",
+    "print(\"Fibonacci Series:\")\n",
+    "\n",
+    "while count < n:\n",
+    "    print(a, end=\" \")\n",
+    "    c = a + b     \n",
+    "    a = b\n",
+    "    b = c\n",
+    "    count += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "060f17b5",
+   "id": "9c9a5356",
    "metadata": {},
    "outputs": [],
    "source": []
