--- a/swapnum/p0.ipynb
+++ b/swapnum/p0.ipynb
@@ -192,6 +192,46 @@
     "    pro*=i\n",
     "print(pro)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1a46208d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WAJP to print all the numbers from 1 to 10\n",
+    "\n",
+    "i = 1  \n",
+    "while i <= 10:\n",
+    "    print(i)\n",
+    "    i += 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7677170",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
