--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -441,7 +441,10 @@
    "id": "e9591d5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Q12. Write a program to print all even numbers that falls between two numbers (exclusive both numbers)\n",
+    "#entered from the user using while loop."
+   ]
   },
   {
    "cell_type": "code",
