--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -614,8 +614,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c9a5356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q19. Write a program to print the factorial of a number accepted from user. \n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "fact = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= num:\n",
+    "    fact = fact * i\n",
+    "    i = i + 1\n",
+    "\n",
+    "print(\"Factorial of\", num, \"is\", fact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b26868b",
    "metadata": {},
    "outputs": [],
    "source": []
