--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -22,6 +22,35 @@
     "\n",
     "print(last_digit)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c3e159f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the last two digit of the number\n",
+    "num = 5783\n",
+    "last_digit = num%100\n",
+    "print(last_digit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ad42911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
