--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -50,7 +50,12 @@
    "id": "9ad42911",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Remove the last digit of the number\n",
+    "num = 5783\n",
+    "last_digit = num // 10\n",
+    "print(last_digit)"
+   ]
   }
  ],
  "metadata": {
