--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -56,6 +56,19 @@
     "last_digit = num // 10\n",
     "print(last_digit)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df755448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the last two digit of the number\n",
+    "num = 5783\n",
+    "last_digit = num // 100\n",
+    "print(last_digit)"
+   ]
   }
  ],
  "metadata": {
