--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -69,6 +69,23 @@
     "last_digit = num // 100\n",
     "print(last_digit)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3288e730",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print each digit of the number one by one from Right to Left.\n",
+    "\n",
+    "num = 5783\n",
+    "\n",
+    "while num > 0:\n",
+    "    rem = num % 10\n",
+    "    num = num // 10\n",
+    "    print(rem)"
+   ]
   }
  ],
  "metadata": {
