--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -86,6 +86,23 @@
     "    num = num // 10\n",
     "    print(rem)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "093444ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With using a third variable\n",
+    "a = 3\n",
+    "b = 5\n",
+    "\n",
+    "c = a\n",
+    "a = b\n",
+    "b = c\n",
+    "print(a,b)"
+   ]
   }
  ],
  "metadata": {
