--- a/operator/py0.ipynb
+++ b/operator/py0.ipynb
@@ -103,6 +103,22 @@
     "b = c\n",
     "print(a,b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eaed7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Without using third variable\n",
+    "a = 3\n",
+    "b = 5\n",
+    "\n",
+    "a,b = b,a\n",
+    "\n",
+    "print(a,b)"
+   ]
   }
  ],
  "metadata": {
