--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -641,8 +641,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b26868b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 X 1 = 2\n",
+      "2 X 2 = 4\n",
+      "2 X 3 = 6\n",
+      "2 X 4 = 8\n",
+      "2 X 5 = 10\n",
+      "2 X 6 = 12\n",
+      "2 X 7 = 14\n",
+      "2 X 8 = 16\n",
+      "2 X 9 = 18\n",
+      "2 X 10 = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#WAP to print the multiplication table\n",
+    "\n",
+    "n = int(input(\"Enter the number: \"))\n",
+    "i=1\n",
+    "while i<=10:\n",
+    "    print(n,'X',i,'=',n*i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a1c4102",
    "metadata": {},
    "outputs": [],
    "source": []
