--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -674,11 +674,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0a1c4102",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAP to print user name 10 times\n",
+    "\n",
+    "user = eval(input(\"Enter your number--\"))\n",
+    "i=1\n",
+    "while i<=10:\n",
+    "    print(user)\n",
+    "    i+=1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73f70c9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
