--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -707,13 +707,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b73f70c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is not an Armstrong number.\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "#Q20. Write a program to check whether a number is Armstrong or not. (Armstrong number is \n",
+    "#a number that is equal to the sum of cubes of its digits for example : 153 = 1^3 + 5^3 + 3^3.) \n",
+    "\n",
+    "n = int(input(\"Enter a number: \"))\n",
+    "num = n\n",
+    "sum = 0\n",
+    "while n > 0:\n",
+    "    digit = n % 10 \n",
+    "    sum += digit ** 3 \n",
+    "    n = n // 10     \n",
+    "if num == sum:\n",
+    "    print(num, \"is an Armstrong number.\")\n",
+    "else:\n",
+    "    print(num, \"is not an Armstrong number.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e507913e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
