--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -743,6 +743,48 @@
    "id": "e507913e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Q21. Write a program to add first n terms of the following series using a while loop: \n",
+    "#1/1! + 1/2! + 1/3! + …….. + 1/n!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bdf26660",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HCF = 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q24. Write a program to find the HCF of two numbers entered from the user.\n",
+    "\n",
+    "a = int(input(\"Enter first number: \"))\n",
+    "b = int(input(\"Enter second number: \"))\n",
+    "\n",
+    "a = abs(a)\n",
+    "b = abs(b)\n",
+    "\n",
+    "while b != 0:\n",
+    "    temp = b\n",
+    "    b = a % b\n",
+    "    a = temp\n",
+    "\n",
+    "print(\"HCF =\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f301ab9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
