--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -781,8 +781,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2f301ab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary of 2 = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q25. Write a program to convert Decimal to Binary.\n",
+    "\n",
+    "num = int(input(\"Enter a decimal number: \"))\n",
+    "n = num\n",
+    "\n",
+    "binary = \"\"\n",
+    "\n",
+    "if n == 0:\n",
+    "    binary = \"0\"\n",
+    "else:\n",
+    "    while n > 0:\n",
+    "        rem = n % 2\n",
+    "        binary = str(rem) + binary\n",
+    "        n = n // 2\n",
+    "print(\"Binary of\", num, \"=\", binary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4d6ca73",
    "metadata": {},
    "outputs": [],
    "source": []
