--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -813,8 +813,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d4d6ca73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121 is a Palindrome Number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q27. Write a program to check whether a number is palindrome or not.\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "original = num  \n",
+    "\n",
+    "reverse = 0\n",
+    "\n",
+    "while num > 0:\n",
+    "    digit = num % 10\n",
+    "    reverse = reverse * 10 + digit\n",
+    "    num = num // 10\n",
+    "\n",
+    "if original == reverse:\n",
+    "    print(original, \"is a Palindrome Number\")\n",
+    "else:\n",
+    "    print(original, \"is NOT a Palindrome Number\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1730676",
    "metadata": {},
    "outputs": [],
    "source": []
