--- a/whileloop/p1.ipynb
+++ b/whileloop/p1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "3029d719",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n"
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "******\n",
+      "*******\n",
+      "********\n",
+      "*********\n",
+      "**********\n"
      ]
     }
    ],
@@ -28,8 +28,37 @@
     "\n",
     "i = 1          \n",
     "while i <= 10:  \n",
-    "    print(i * 2)   \n",
+    "    print('*' * i)   \n",
     "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "698954cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "j = 9\n",
+    "while i+1 < j:\n",
+    "    print(i)\n",
+    "    i+= 1"
    ]
   },
   {
